--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -88,7 +88,7 @@
 }
 
 .simulation-caption-container{
-    padding: .3rem .5rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
