--- a/client/src/components/molecules/CpuDistribution/CpuDistribution.css
+++ b/client/src/components/molecules/CpuDistribution/CpuDistribution.css
@@ -3,7 +3,8 @@
   backdrop-filter: blur(80px);
   border-radius: 20px;
   padding: 1.5rem;
-  min-height: 400px;
+  height: 100%;
+  max-height: 400px;
   display: flex;
   flex-direction: column;
 }
